# hide-and-seek

./: README.md  pyproject.toml
hide_and_seek/: __init__.py  __main__.py  audio.py  game.py  notes.py  scale_detector.py  scale_detector_cli.py
tests/: test_notes.py
